# python-libsnark

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST  README.md  alt_bn128.py  alt_bn128_g1.i  alt_bn128_g2.i  alt_bn128_wrap.cpp  io.i  io_zk.i  io_zkgg.i  knowledge_commitment.i  libsnark.i  pb_variable.i  profiling.i  protoboard.i  r1cs.i  r1cs_ppzksnark.i  serialization.i  setup-win32.py  setup.py  swigtypes.i  synthesis.i  variable.i  win32-build.bat
cmake/: libsnark.cmake
docs/: Makefile  conf.py  index.rst
examples/: test.py
